--- a/ed-springboot-learning/src/main/resources/application.properties
+++ b/ed-springboot-learning/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+#\u6570\u636e\u5e93
 spring.jpa.database: MYSQL
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_blog3
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
+#\u670d\u52a1\u5668\u7aef\u53e3.\u8fd9\u6837\u5c31\u4e0d\u518d\u662f\u9ed8\u8ba4\u76848080\u7aef\u53e3\u4e86
+server.port=8081
+server.session.timeout=10
+server.tomcat.uri-encoding=UTF-8
+#freemarker\u7684\u914d\u7f6e
+spring.freemarker.cache=false
+spring.freemarker.checkTemplateLocation=true
+spring.freemarker.contentType=text/html
+spring.freemarker.suffix=.html
+spring.freemarker.templateEncoding=UTF-8
+spring.freemarker.templateLoaderPath=classpath:/templates/
