--- a/ed-springboot-learning/src/main/resources/application.properties
+++ b/ed-springboot-learning/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #\u6570\u636e\u5e93
 spring.jpa.database: MYSQL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_blog3
+spring.datasource.url=jdbc:mysql://192.168.1.104:3306/db_blog3
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_blog3
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
