--- a/ed-springboot-learning/pom.xml
+++ b/ed-springboot-learning/pom.xml
@@ -54,11 +54,11 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 		<!-- bonecp的连接池 -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.jolbox</groupId>
 			<artifactId>bonecp-spring</artifactId>
 			<version>0.8.0.RELEASE</version>
-		</dependency>
+		</dependency> -->
 		<!--thymeleaf模板jar，是很不错的html数据传递取值，类似jsp的jstl -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -90,30 +90,30 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
+				<!-- <configuration>
 					<fork>true</fork>
 					<source>1.8</source>
 					<target>1.8</target>
 					<encoding>UTF-8</encoding>
-				</configuration>
+				</configuration> -->
 			</plugin>
 			<!-- 资源文件拷贝插件 -->
-			<plugin>
+		<!-- 	<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 		<pluginManagement>
 			<plugins>
 				<!-- 配置Tomcat插件 -->
-				<plugin>
+				<!-- <plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
-				</plugin>
+				</plugin> -->
 			</plugins>
 		</pluginManagement>
 	</build>
