--- a/ed_springboot-jpa/pom.xml
+++ b/ed_springboot-jpa/pom.xml
@@ -37,12 +37,16 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
 		<!-- 添加springloaded依赖，第一种方法，支持热部署 -->
@@ -52,10 +56,8 @@
 			<version>1.2.5.RELEASE</version>
 		</dependency>
 		<!-- 添加spring-boot-devtools依赖，第二种方法，支持热部署 -->
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-devtools</artifactId> 
+			</dependency> -->
 	</dependencies>
 
 	<build>
