commit user and news

--- a/ed_springboot_gradle/src/main/resources/application.properties
+++ b/ed_springboot_gradle/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8083
 #日志文件设置
 logging.level.*=DEBUG
 logging.file=/logs/server.log
-
+# 文件头像上传地址
 image.file.upload.dir=static/upload/
 
 # 开发环境，关闭缓存
