--- a/david_springboot_parent/pom.xml
+++ b/david_springboot_parent/pom.xml
@@ -52,5 +52,6 @@
 	</dependencies>
 	<modules>
 		<module>david_springboot_javamail</module>
+		<module>david_springboot_thymeleaf</module>
 	</modules>
 </project>
