--- a/ed-springboot-crawler/pom.xml
+++ b/ed-springboot-crawler/pom.xml
@@ -48,6 +48,16 @@
 			<version>1.8.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.32</version>
+		</dependency>
 	</dependencies>
 
 	<build>
