--- a/david_springboot_parent/pom.xml
+++ b/david_springboot_parent/pom.xml
@@ -53,5 +53,6 @@
 	<modules>
 		<module>david_springboot_javamail</module>
 		<module>david_springboot_thymeleaf</module>
+		<module>david_springboot_jpush</module>
 	</modules>
 </project>
