--- a/david_springboot_parent/david_springboot_websocket/src/main/resources/application.properties
+++ b/david_springboot_parent/david_springboot_websocket/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.freemarker.settings.default_encoding=UTF-8
 spring.freemarker.settings.classic_compatible=true
 spring.freemarker.order=1
 
-server.port=8080
-
+server.port=8081
+server.servlet-path=/
