--- a/david_springboot_parent/pom.xml
+++ b/david_springboot_parent/pom.xml
@@ -59,5 +59,6 @@
 		<module>david_springboot_logback</module>
 		<module>david_springboot_webservice</module>
 		<module>david_springboot_schedule</module>
+		<module>david_springboot_errorpage</module>
 	</modules>
 </project>
