--- a/david_springboot_parent/pom.xml
+++ b/david_springboot_parent/pom.xml
@@ -61,5 +61,6 @@
 		<module>david_springboot_schedule</module>
 		<module>david_springboot_errorpage</module>
 		<module>david_springboot_rabbitmq</module>
+		<module>david_springboot_mongodb</module>
 	</modules>
 </project>
