更定电影天堂电影地址爬虫

--- a/david_springboot_parent/pom.xml
+++ b/david_springboot_parent/pom.xml
@@ -63,5 +63,6 @@
 		<module>david_springboot_rabbitmq</module>
 		<module>david_springboot_mongodb</module>
 		<module>david_springboot_activemq</module>
+		<module>david_springboot_shiro</module>
 	</modules>
 </project>
