--- a/david_springboot_parent/david_springboot_wxpay/src/main/resources/application.properties
+++ b/david_springboot_parent/david_springboot_wxpay/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
