--- a/david_springboot_parent/david_springboot_wxpay/pom.xml
+++ b/david_springboot_parent/david_springboot_wxpay/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>nekohtml</artifactId>
 			<version>1.9.22</version>
 		</dependency>
+				<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
 		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-api</artifactId> 
 			<version>1.7.21</version> </dependency> <dependency> <groupId>org.slf4j</groupId> 
 			<artifactId>slf4j-simple</artifactId> <version>1.7.21</version> </dependency> -->
