--- a/david_springboot_parent/david_springboot_fileupload/pom.xml
+++ b/david_springboot_parent/david_springboot_fileupload/pom.xml
@@ -11,6 +11,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -39,5 +41,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
