--- a/david_springboot_parent/david_springboot_interceptor/pom.xml
+++ b/david_springboot_parent/david_springboot_interceptor/pom.xml
@@ -11,7 +11,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>david_springboot_interceptor</name>
 	<description>this is david_springboot_interceptor jar</description>
-
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -24,4 +28,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
