--- a/springboot_redis/src/main/resources/application.properties
+++ b/springboot_redis/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.resources.add-mappings=false
 
 
 # \u6570\u636e\u5e93\u8bbf\u95ee\u914d\u7f6e\u4e3b\u6570\u636e\u6e90\uff0c\u9ed8\u8ba4\u7684
-spring.datasource.url: jdbc:mysql://192.168.1.184:3306/rx_tech_mt?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url: jdbc:mysql://192.168.1.110:3306/david?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username: root
 spring.datasource.password: 1234
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
@@ -45,7 +45,7 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 
 ## \u5982\u679c\u4f7f\u7528mapper.xml \u914d\u7f6e\uff0c\u8bf7\u6dfb\u52a0\u5982\u4e0b\u914d\u7f6e\u3002
 # Mybatis
-mybatis.type-aliases-package=com.sunorien.model
+mybatis.type-aliases-package=com.david.model
 mybatis.mapper-locations=classpath:/mapper/*.xml
 # Mapper
 mapper.not-empty=false
@@ -60,7 +60,7 @@ pagehelper.params=count=countSql
 
 #################redis\u57fa\u7840\u914d\u7f6e#################
 spring.redis.database=5 
-spring.redis.host=192.168.1.184
+spring.redis.host=192.168.1.110
 spring.redis.password=
 spring.redis.port=6379
 # \u8fde\u63a5\u8d85\u65f6\u65f6\u95f4 \u5355\u4f4d ms\uff08\u6beb\u79d2\uff09
