--- a/springboot_server/springboot_server_portal_web/src/main/resources/application.properties
+++ b/springboot_server/springboot_server_portal_web/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=8081
 
 ## Dubbo \u670d\u52a1\u6d88\u8d39\u8005\u914d\u7f6e
-spring.dubbo.application.name=portal_web
-spring.dubbo.registry.address=zookeeper://192.168.1.91:2181
-spring.dubbo.scan=com.david.service
+dubbo.application.name=portal_web_david
+dubbo.registry.address=zookeeper://192.168.1.111:2181
+dubbo.scan.basePackages=com.david
+dubbo.reference.check=false
+dubbo.consumer.check=false
