--- a/springboot_server/springboot_server_manager_web/src/main/resources/application.properties
+++ b/springboot_server/springboot_server_manager_web/src/main/resources/application.properties
@@ -1,7 +1,43 @@
 ## Dubbo \u670d\u52a1\u63d0\u4f9b\u8005\u914d\u7f6e
-spring.dubbo.application.name=manager_web
-spring.dubbo.registry.address=zookeeper://192.168.1.91:2181
+spring.dubbo.application.name=manager_web_david
+#spring.dubbo.registry.address=zookeeper://config.trainzz.cn:2181
+spring.dubbo.registry.address=zookeeper://192.168.1.195:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
 # \u914d\u7f6e\u5305\u626b\u63cf
 spring.dubbo.scan=com.david.service
+
+# \u6570\u636e\u5e93\u5e73\u53f0
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# \u6570\u636e\u5e93\u8fde\u63a5URL
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jspxcms?characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost/zhengchuanweitest?characterEncoding=utf8
+# \u6570\u636e\u5e93\u7528\u6237\u540d
+spring.datasource.username=root
+# \u6570\u636e\u5e93\u5bc6\u7801
+spring.datasource.password=1234
+# \u6570\u636e\u5e93\u9a71\u52a8
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# \u8fde\u63a5\u6c60\u6700\u5927\u8fde\u63a5\u6570\uff0c\u9ed8\u8ba4100
+spring.datasource.tomcat.max-active=30
+# \u8fde\u63a5\u6c60\u6700\u5927\u7a7a\u95f2\u8fde\u63a5\u6570\uff0c\u9ed8\u8ba4\u4e0e\u6700\u5927\u8fde\u63a5\u6570\u4e00\u6837
+spring.datasource.tomcat.max-idle=30
+# \u8fde\u63a5\u6c60\u521d\u59cb\u8fde\u63a5\u6570\u636e\uff0c\u9ed8\u8ba410
+spring.datasource.tomcat.initial-size=10
+# \u8fde\u63a5\u6c60\u6700\u5c0f\u7a7a\u95f2\u8fde\u63a5\u6570\uff0c\u9ed8\u8ba4\u4e0e\u521d\u59cb\u5316\u8fde\u63a5\u6570\u4e00\u6837
+spring.datasource.tomcat.min-idle=10
+# \u6570\u636e\u5e93\u4e8b\u52a1\u662f\u5426\u81ea\u52a8\u63d0\u4ea4\uff0c\u5e94\u8bbe\u7f6e\u4e3afalse
+spring.datasource.tomcat.default-auto-commit=false
+# \u5982\u679c\u6570\u636e\u5e93\u4f1a\u81ea\u52a8\u65ad\u5f00\u8fde\u63a5\uff0c \u4e00\u822c\u5f00\u542fvalidation-query, test-while-idle\u5373\u53ef\uff0ctest-on-borrow,test-on-return\u5bf9\u6027\u80fd\u6709\u4e00\u5b9a\u5f71\u54cd
+# mysql,sqlserver\u7528select 1\uff0coracle\u6570\u636e\u5e93\u7528select 1 from dual
+spring.datasource.tomcat.validation-query=select 1
+# \u5f53\u6570\u636e\u5e93\u8fde\u63a5\u7a7a\u95f2\u7684\u65f6\u5019\uff0c\u68c0\u67e5\u8fde\u63a5\u662f\u5426\u53ef\u7528
+spring.datasource.tomcat.test-while-idle=true
+# \u4f7f\u7528JNDI\u65b9\u5f0f\u83b7\u53d6\u6570\u636e\u5e93\u8fde\u63a5\uff0c\u9700\u5148\u914d\u7f6e\u597dJNDI
+#spring.datasource.jndi-name=java:comp/env/jdbc/jspxcms
+
+# \u5173\u95ed\u9ed8\u8ba4\u7684interceptor\u65b9\u5f0f\uff0c\u81ea\u884c\u4f7f\u7528filter\u65b9\u5f0f\u3002\u56e0\u4e3a\u8981\u4f7f\u7528shiro\uff0cshiro\u662ffilter\uff0copen session in view\u8981\u5728shiro\u4e4b\u524d\u6253\u5f00
+spring.jpa.open-in-view=false
+# \u4f7f\u7528\u589e\u5f3a\u7248\u7684\u4e3b\u952e\u751f\u6210\u5668\u3002Hibernate5\u9ed8\u8ba4\u4e3atrue\uff0cSpringBoot\u5374\u9ed8\u8ba4\u8bbe\u7f6e\u4e3afalse
+spring.jpa.hibernate.use-new-id-generator-mappings=true
